port: ported the content to 26.2